--- a/homework-3/PANDAS.ipynb
+++ b/homework-3/PANDAS.ipynb
@@ -2076,7 +2076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1011,
+   "execution_count": 1014,
    "metadata": {},
    "outputs": [
     {
@@ -2085,7 +2085,7 @@
        "Text(0.5, 1.0, 'График средних сумм покупок по дням недели')"
       ]
      },
-     "execution_count": 1011,
+     "execution_count": 1014,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2106,6 +2106,9 @@
     "weekdays = [\"Monday\", \"Tuesday\", \"Wednesday\", \"Thursday\", \"Friday\", \"Saturday\", \"Sunday\"]\n",
     "\n",
     "def convert_date(date):\n",
+    "    \"\"\"\n",
+    "    Преобразует дату формата yyyy-mm-dd в день недели\n",
+    "    \"\"\"\n",
     "    new_date = [int(i) for i in date.split('-')]\n",
     "    weekday = datetime.datetime(new_date[0], new_date[1], new_date[2]).weekday()\n",
     "    return weekdays[weekday]\n",
@@ -2129,7 +2132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1012,
+   "execution_count": 1015,
    "metadata": {},
    "outputs": [
     {
@@ -2138,7 +2141,7 @@
        "Text(0.5, 1.0, 'График зависимости денег за товар от купленного количества')"
       ]
      },
-     "execution_count": 1012,
+     "execution_count": 1015,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2175,7 +2178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1013,
+   "execution_count": 1016,
    "metadata": {},
    "outputs": [],
    "source": [
